added badge tasks

--- a/pages/4_Lesson.html
+++ b/pages/4_Lesson.html
@@ -98,22 +98,12 @@ for the JavaScript code in this tag.
 <h3 id="sec-1-2">Badget It</h3>
 <div class="outline-text-3" id="text-1-2">
 
-<p>
-<b>Silver</b>
-</p>
-<ul class="org-ul">
-<li>Publish your webpage (your html file) to the student web.
-</li>
-<li>Test your webpage by opening it in a browser:
-<a href="https://studentweb/~04as11">https://studentweb/~04as11</a> (replace 04as11 with your own login ID)
-</li>
-</ul>
 
 <p>
 <b>Gold</b>
 </p>
 <ul class="org-ul">
-<li>Publish your webpage along with your css file to the student web.
+<li>Publish your webpage along with your external css file to the student web.
 </li>
 <li>Test your webpage and style sheet work by opening it in a browser:
 <a href="https://studentweb/~04as11">https://studentweb/~04as11</a> (replace 04as11 with your own login ID)
