--- a/pages/2_Lesson.html
+++ b/pages/2_Lesson.html
@@ -90,9 +90,10 @@ for the JavaScript code in this tag.
 </li>
 <li>There will be a contest at the end of this project across year group in different categories(will be anounced here soon).
 </li>
-<li>To start with, please follow this tutorial on how to get your webpage centered.
+<li>Please follow this tutorial on how to get your webpage started.
 </li>
 </ul>
+
 
 <table>
 <tr>
@@ -129,18 +130,20 @@ for the JavaScript code in this tag.
 
 <ul class="org-ul">
 <li>Useful resources on the Internet
+
 <ul class="org-ul">
-<li>pick a colour: href='http://www.w3schools.com/cssref/css<sub>colors</sub>.asp'
+<li><a href="http://www.w3schools.com/cssref/css_colors.asp">HTML colour picker</a>
 </li>
-<li>if you forget about some tags or just what to learno some new ones:href='http://www.w3schools.com/html/default.asp'
+<li>if you forget about some tags or just what to learn some new ones, <a href="http://www.w3schools.com/html/default.asp">w3school</a>s 
 </li>
-<li>if you would like to learn more CSS style tricks: href='http://www.w3schools.com/css/default.asp'
+<li>if you would like to learn more CSS style tricks, also on <a href="http://www.w3schools.com/css/default.asp">w3schools</a>. 
 </li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
+
 
 <div id="outline-container-sec-1-2" class="outline-3 badge">
 <h3 id="sec-1-2">Badge It - Silver</h3>
