added all 4 quizzes

--- a/pages/3_Lesson.html
+++ b/pages/3_Lesson.html
@@ -86,7 +86,7 @@ for the JavaScript code in this tag.
 <div class="outline-text-3" id="text-1-1">
 
 <ul class="org-ul">
-<li>Once you have created the general layput and tested your webpage is working as intended, click <a href="https://www.bournetolearn.com/quizzes/y7-webDesign/Lesson_2/">here</a> for the self assessment. You will be awarded <b>Silver</b>, <b>Gold</b> badges based on your progress.
+<li>Once you have created the general layput and tested your webpage is working as intended, click <a href="https://www.bournetolearn.com/quizzes/y7-webIndDev/Lesson_2/index.php">here</a> for the self assessment. You will be awarded <b>Silver</b>, <b>Gold</b> and/or <b>Platinum</b> badges based on your progress.
 </li>
 <li>You can always come back here to re-take the assessment quiz once you have finished the task.
 </li>
@@ -103,9 +103,10 @@ for the JavaScript code in this tag.
 <ul class="org-ul">
 <li>Once you have created the general layout and tested your webpage is working as intended, then you will add links and images as you have planned in your design.
 </li>
-<li>Click <a href="https://www.bournetolearn.com/quizzes/y7-webDesign/Lesson_2/">here</a> for the self assessment. You will be awarded <b>Silver</b>, <b>Gold</b> , <b>Platinum</b> badges based on your progress.
+<li>Click <a href="https://www.bournetolearn.com/quizzes/y7-webIndDev/Lesson_3/index.php">here</a> for the self assessment. You will be awarded <b>Silver</b>, <b>Gold</b> , <b>Platinum</b> badges based on your progress.
 </li>
-<li>You can always come back here to re-take the assessment quiz once you have finished the task.
+<li>You can always come back here to re-take the assessment quiz once you 
+have finished the task.
 </li>
 </ul>
 </div>
@@ -117,7 +118,7 @@ for the JavaScript code in this tag.
 <div class="outline-text-3" id="text-1-3">
 
 <ul class="org-ul">
-<li>Once you have created the general layout and tested your webpage is working as intended, click <a href="https://www.bournetolearn.com/quizzes/y7-webDesign/Lesson_2/">here</a> for the self assessment. You will be awarded <b>Silver</b>, <b>Gold</b>, <b>Platinum</b> badges based on your progress.
+<li>Once you have created the general layout and tested your webpage is working as intended, click <a href="https://www.bournetolearn.com/quizzes/y7-webIndDev/Lesson_4/index.php">here</a> for the self assessment. You will be awarded <b>Gold</b>,and/or <b>Platinum</b> badges based on your progress.
 </li>
 <li>You can always come back here to re-take the assessment quiz once you have finished the task.
 </li>
