--- a/pages/4_Lesson.html
+++ b/pages/4_Lesson.html
@@ -106,7 +106,7 @@ for the JavaScript code in this tag.
 <li>Publish your webpage along with your external css file to the student web.
 </li>
 <li>Test your webpage and style sheet work by opening it in a browser:
-<a href="https://studentweb/~04as11">https://studentweb/~04as11</a> (replace 04as11 with your own login ID)
+<a href="https://studentweb/~04xe11">https://studentweb/~04xe11</a> (replace 04xe11 with your own login ID)
 </li>
 </ul>
 
@@ -115,6 +115,38 @@ for the JavaScript code in this tag.
 </p>
 <ul class="org-ul">
 <li>All the above, but with two linked webpages which use an external CSS file and all images used worked correctly.
+</li>
+</ul>
+
+
+<ul class="org-ul">
+<li>Once you have published your work, send your website link to your friends and ask your friend give you some feedback. 
+</li>
+<li>After your friend had a look at your website, take this <a href="https://www.bournetolearn.com/quizzes/y7-webIndDev/Lesson_5/index.php">sef-assessment</a> quiz with your friend. 
+</li>
+</ul>
+
+<p>
+<b>Literacy</b> 
+</p>
+<ul class="org-ul">
+<li>After you have done publishing your website and your friend had given you some feedback, write a 200 words <code>self evaluation</code> of your website.
+<ul class="org-ul">
+<li>what is good about it in general?
+</li>
+<li>is the disign appropriate for the content and the intended audience?
+</li>
+<li>is the choice of fonts, images, or colour appropriate for the designed website?
+</li>
+<li>what is the feedback your friend gave you and what do you think about the feedback?
+</li>
+<li>what is not so good about it and why?
+</li>
+<li>if you are going to start it all over again, what will you do differently and why?
+</li>
+</ul>
+</li>
+<li>Upload your written evaluation to bournetolearn.com
 </li>
 </ul>
 </div>
