--- a/pages/3_Lesson.html
+++ b/pages/3_Lesson.html
@@ -86,7 +86,7 @@ for the JavaScript code in this tag.
 <div class="outline-text-3" id="text-1-1">
 
 <ul class="org-ul">
-<li>Once you have created the general layput and tested your webpage is working as intended, click <a href="https://www.bournetolearn.com/quizzes/y7-webIndDev/Lesson_2/index.php">here</a> for the self assessment. You will be awarded <b>Silver</b>, <b>Gold</b> and/or <b>Platinum</b> badges based on your progress.
+<li>Once you have created the general layout and tested your webpage is working as intended, click <a href="https://www.bournetolearn.com/quizzes/y7-webIndDev/Lesson_2/index.php">here</a> for the self assessment. You will be awarded <b>Silver</b>, <b>Gold</b> and/or <b>Platinum</b> badges based on your progress.
 </li>
 <li>You can always come back here to re-take the assessment quiz once you have finished the task.
 </li>
