--- a/pages/1_Lesson.html
+++ b/pages/1_Lesson.html
@@ -120,7 +120,16 @@ for the JavaScript code in this tag.
 </li>
 </ul>
 </li>
+
+<li>You can also follow this video tutorial to learn how to use external style sheet.
+</li>
 </ul>
+
+
+<video width="640" height="480" controls>
+  <source src="./img/externalStyleSheet.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 </div>
 </div>
 </div>
