--- a/pages/2_Lesson.html
+++ b/pages/2_Lesson.html
@@ -90,11 +90,12 @@ for the JavaScript code in this tag.
 </li>
 <li>There will be a contest at the end of this project across year group in different categories(will be anounced here soon).
 </li>
-<li>Please follow this tutorial on how to get your webpage started.
+<li>There is a video tutorial after the templates on how to get your webpage started.
 </li>
 </ul>
 
 
+<h2>Webpage layouts for you to choose</h2>
 <table>
 <tr>
 <td><a target="_self" href="basic1-examples.html"><img src="./img/layout-basic1.jpg" alt="layout-1" width="320" height="280"></a>
@@ -127,7 +128,7 @@ for the JavaScript code in this tag.
 <td>Advanced Layout 2</td>
 </tr>
 </table>
-
+<h3>Helpful Resources</h3>
 <ul class="org-ul">
 <li>Useful resources on the Internet
 
@@ -140,10 +141,17 @@ for the JavaScript code in this tag.
 </li>
 </ul>
 </li>
+<li>A video tutorial to get you started:
+</li>
 </ul>
-</div>
-</div>
 
+<video width="640" height="480" controls>
+  <source src="./img/centerThePage.mp4" type="video/mp4">
+
+  Your browser does not support the video tag.
+</video>
+</div>
+</div>
 
 <div id="outline-container-sec-1-2" class="outline-3 badge">
 <h3 id="sec-1-2">Badge It - Silver</h3>
