some changes to L1&2

--- a/pages/1_Lesson.html
+++ b/pages/1_Lesson.html
@@ -101,16 +101,16 @@ for the JavaScript code in this tag.
 </li>
 <li>Hightlight to select all the content in between the &lt;style&gt; and &lt;/style&gt; in your webpage file. (not select the &lt;style&gt; and &lt;/style&gt; tage). 
 </li>
-<li>Copy the slection.
+<li>Cut the slection (Ctrl-X).
 </li>
-<li>Go to the blank new file and paste the selection
+<li>Go to the blank new file and paste the selection (Ctrl-V)
 </li>
 <li>Save the new file as style.css in the same folder as your webpage file.
 </li>
 <li>Go back to your webpage file, remove the two style tags. In its place, add the link to your new styles.css file using the code below:
 <div class="org-src-container">
 
-<pre class="src src-html">&lt;link rel="stylesheet" href="styles.css"&gt;
+<pre class="src src-html">&lt;link rel="stylesheet" href="style.css"&gt;
 </pre>
 </div>
 </li>
