--- a/pages/2_Lesson.html
+++ b/pages/2_Lesson.html
@@ -166,6 +166,8 @@ for the JavaScript code in this tag.
 </li>
 <li>Using the Paint program, starting by drawing the choosen layout, then filling in the layout with specifics on background colours, and where your links, images and paragraphs etc will go.
 </li>
+<li>Using the text tool in Paint to specify the audience and topic you have choosen.
+</li>
 <li>Upload your finished design to bournetolearn.
 </li>
 </ul>
