--- a/pages/2_Lesson.html
+++ b/pages/2_Lesson.html
@@ -168,7 +168,26 @@ for the JavaScript code in this tag.
 </li>
 <li>Using the text tool in Paint to specify the audience and topic you have choosen.
 </li>
+
 <li>Upload your finished design to bournetolearn.
+</li>
+</ul>
+</div>
+</div>
+
+
+<div id="outline-container-sec-1-3" class="outline-3 badge">
+<h3 id="sec-1-3">Badge It - Gold</h3>
+<div class="outline-text-3" id="text-1-3">
+
+<ul class="org-ul">
+<li>Use pen, paper and a ruler to draw each DIV with the appropriate deminsion.
+</li>
+<li>Here is an example of such work:
+<img src="./img/designDivs.png" alt="designDivs.png" />
+</li>
+
+<li>Take a photo of your finished work and upload to bournetolearn.
 </li>
 </ul>
 </div>
