--- a/pages/homework.html
+++ b/pages/homework.html
@@ -71,9 +71,7 @@ for the JavaScript code in this tag.
       <li><a href="2_Lesson.html">Week2</a></li>
       <li><a href="3_Lesson.html">Week3</a></li>
       <li><a href="4_Lesson.html">Week4</a></li>
-      <li><a href="5_Lesson.html">Week5</a></li>
-      <li><a href="6_Lesson.html">Week6</a></li>
-      <li><a href="7_Lesson.html">Week7</a></li>
+>
       <li><a href="homework.html">Homework</a></li>
 
     </ul>
@@ -83,29 +81,25 @@ for the JavaScript code in this tag.
 <div class="outline-text-2" id="text-1">
 </div>
 <div id="outline-container-sec-1-1" class="outline-3 learn">
-<h3 id="sec-1-1">Homework 1 - get around the web for web</h3>
+<h3 id="sec-1-1">Homework 1 - use of images</h3>
 <div class="outline-text-3" id="text-1-1">
 
 <ul class="org-ul">
-<li>One of the important skill as as a web developer is to be able to use the vast information on the Internet to help you achieve the desired outcomes with your webpages.
+<li>You have used images in your webpages.
 </li>
-<li>You have learned some neat html tags in your lessons. But there are many more tags that will make your webpages standout.
+<li>You also learned how to specify size of an image so it will fit with your overall webpage design.
 </li>
-<li>One of the popular website to learn about those skills is <a href="https://www.w3schools.com/html/default.asp">w3schools.com</a>
+<li>There are two types of images: vector and bitmap
 </li>
-<li>the w3schools.com website also allows to practice your skills online so you can see the effect right away.
-</li>
-
-<li>Your homework:
+<li>Your homework will be as following:
 <ol class="org-ol">
-<li>Explore  <a href="https://www.w3schools.com/html/default.asp">w3schools.com</a>  website and learn 3 new tags and use the <code>Try It Yourself</code> facility to practice those.
+<li>Research what those two types of images are with examples.
 </li>
-<li>Write down what those tags are, what they do and wheather they need both a start and a end tag.
+<li>The advantages and disadvantges of each.
+</li>
+<li>When is better to use one type over the other.
 </li>
 </ol>
-</li>
-
-<li>Answers to be submitted as a text file or image for the homework 1 badge on <a href="https://www.bournetolearn.com/">BourneToLearn</a>.
 </li>
 </ul>
 </div>
@@ -116,52 +110,17 @@ for the JavaScript code in this tag.
 <div class="outline-text-3" id="text-1-2">
 
 <ul class="org-ul">
-<li>Tom has created two html files: <code>index.html</code> and <code>mySecondPage.html</code>
-</li>
-<li>Tom made the links in each of the two files so they should link to each other by a hyperlink.
-</li>
-<li>Tom opened the <code>index.html</code> file in browser, but disapponitedly, it did not work.
-</li>
-<li>There are some mistakes in both of Tom's files. Can you identify all of the erros Tom has made in his two webpage files? Hints: there 3 errors in the each of the files.
-</li>
-<li>Tom's <code>index.html</code> file:
+<li>coming soon
 </li>
 </ul>
-
-<div class="figure">
-<p><img src="./img/index-err.png" alt="index-err.png" />
-</p>
-</div>
-<ul class="org-ul">
-<li>Tom's <code>mySecondPage.html</code> file:
-</li>
-</ul>
-
-<div class="figure">
-<p><img src="./img/secondPageErr.png" alt="secondPageErr.png" />
-</p>
 </div>
 </div>
-</div>
-
 
 <div id="outline-container-sec-1-3" class="outline-3 learn">
 <h3 id="sec-1-3">Homework 3 - Literacy Task</h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
-<li>In "How the Internet Works" unit, you have learned what the Internet is and what the world wide web(WWW) is. I hope you now understand they are two different things.
-</li>
-<li>Do some your own research on the world wide web on the Internet, write a 200 words summary on the following points:
-<ol class="org-ol">
-<li>What role did sir Tim Berners-Lee play in creating the WWW and the mark up language you have been using to create webpages? 
-</li>
-<li>What is a web server?
-</li>
-<li>BEFORE the Internet and the WWW, what did people in the past use to find out information such as business/school phone numbers, movie show times, and what did people do if they want to conduct some research on a holiday destination?
-</li>
-</ol>
-</li>
-<li>Upload your work to www.bournetolearn.com or hand it in to your teacher if uploading is impossible.
+<li>coming soon
 </li>
 </ul>
 </div>
