--- a/pages/3_Lesson.html
+++ b/pages/3_Lesson.html
@@ -86,6 +86,10 @@ for the JavaScript code in this tag.
 <div class="outline-text-3" id="text-1-1">
 
 <ul class="org-ul">
+<li>There is a <a href="./img/Wrapper-topbox-container.mp4">video tutorial</a> here about creating a wrapper, a topbox and a container you may find it useful to help you get started. 
+</li>
+<li>There is <a href="./img/leftbox-twoRightboxes.mp4">another video tutorial</a> here about creating left and right boxes/DIVs inside a container.
+</li>
 <li>Once you have created the general layout and tested your webpage is working as intended, click <a href="https://www.bournetolearn.com/quizzes/y7-webIndDev/Lesson_2/index.php">here</a> for the self assessment. You will be awarded <b>Silver</b>, <b>Gold</b> and/or <b>Platinum</b> badges based on your progress.
 </li>
 <li>You can always come back here to re-take the assessment quiz once you have finished the task.
@@ -95,13 +99,18 @@ for the JavaScript code in this tag.
 </div>
 
 
-
 <div id="outline-container-sec-1-2" class="outline-3 badge">
 <h3 id="sec-1-2">Badge It - Links and Images</h3>
 <div class="outline-text-3" id="text-1-2">
 
 <ul class="org-ul">
 <li>Once you have created the general layout and tested your webpage is working as intended, then you will add links and images as you have planned in your design.
+</li>
+<li>There is a video tutrial on <a href="./img/background-images.mp4">how to use images as background</a> in your DIVs.
+</li>
+<li>This video tutorial (coming soon) is on how to style hyperlinks so when hoverover, they change colour.
+</li>
+<li>This video tutorial (coming soon) is on how to style the links so they appear in a line with a vertical bar between them.
 </li>
 <li>Click <a href="https://www.bournetolearn.com/quizzes/y7-webIndDev/Lesson_3/index.php">here</a> for the self assessment. You will be awarded <b>Silver</b>, <b>Gold</b> , <b>Platinum</b> badges based on your progress.
 </li>
@@ -112,12 +121,13 @@ have finished the task.
 </div>
 </div>
 
-
 <div id="outline-container-sec-1-3" class="outline-3 badge">
 <h3 id="sec-1-3">Badge It - The Finer Touches</h3>
 <div class="outline-text-3" id="text-1-3">
 
 <ul class="org-ul">
+<li>There is a video tutorial(coming soon) on how to style your webpages to make it look amazing by adding border styles, shadows, padding, and margins.
+</li>
 <li>Once you have created the general layout and tested your webpage is working as intended, click <a href="https://www.bournetolearn.com/quizzes/y7-webIndDev/Lesson_4/index.php">here</a> for the self assessment. You will be awarded <b>Gold</b>,and/or <b>Platinum</b> badges based on your progress.
 </li>
 <li>You can always come back here to re-take the assessment quiz once you have finished the task.
