--- a/pages/homework.html
+++ b/pages/homework.html
@@ -106,16 +106,39 @@ for the JavaScript code in this tag.
 </div>
 
 <div id="outline-container-sec-1-2" class="outline-3 learn">
-<h3 id="sec-1-2">Homework 2 - Identify the errors</h3>
+<h3 id="sec-1-2">Homework 2 - On the border</h3>
 <div class="outline-text-3" id="text-1-2">
 
 <ul class="org-ul">
-<li>coming soon
+<li>We have learned adding border to a DIV
+</li>
+<li>You can also add a shadow to a DIV to make it look floating like this one below:
+
+<div style=" width: 300px;
+    height: 100px;
+    background-color: lightblue;
+    box-shadow: 10px 10px 5px #888888;"></div>
+</li>
+
+<li>Take a look at<a href="https://www.w3schools.com/cssref/css3_pr_box-shadow.asp"> this website</a> on how to add shadow to a DIV by using CSS style like the following:
+<pre class="example">
+#topbox { 
+    width: 800px;
+    height: 150px;
+    background-color: lightblue;
+    box-shadow: 10px 10px 5px #888888;
+}
+</pre>
+</li>
+<li>your homework:
+<ul class="org-ul">
+<li>explain what each of the numbers means after the box-shadow. For example, what does <code>10px 10px 5px  #88888</code> mean?
+</li>
+</ul>
 </li>
 </ul>
 </div>
 </div>
-
 <div id="outline-container-sec-1-3" class="outline-3 learn">
 <h3 id="sec-1-3">Homework 3 - Literacy Task</h3>
 <div class="outline-text-3" id="text-1-3">
