--- a/pages/homework.html
+++ b/pages/homework.html
@@ -132,7 +132,7 @@ for the JavaScript code in this tag.
 </li>
 <li>your homework:
 <ul class="org-ul">
-<li>explain what each of the numbers means after the box-shadow. For example, what does <code>10px 10px 5px  #88888</code> mean?
+<li>explain what each of the numbers means after the box-shadow. For example, what does each of the <code>10px 10px 5px  #88888</code> mean?
 </li>
 </ul>
 </li>
@@ -143,7 +143,13 @@ for the JavaScript code in this tag.
 <h3 id="sec-1-3">Homework 3 - Literacy Task</h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
-<li>coming soon
+<li>Websites are meant to be published online for everyone to see.
+</li>
+<li>Companies try very hard to get their websites to show up on Google search to attract traffic to their sites.
+</li>
+<li>One way to do this is to have a domain name that is easier to remember, like the bournetocode.com.
+</li>
+<li>Research online to find out at least 3 ways websites can improve their ranking on Google search. Write your result in good English with at least 150 words.
 </li>
 </ul>
 </div>
